.sst/dist/dev-web-app-BetestNodeHapiPg.template.json
{
 "Resources": {
  "CustomResourceHandlerServiceRole41AEC181": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "CustomResourceHandlerE8FB56BA": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-511522223657-ap-south-1",
     "S3Key": "9d06aa1f2b3f99b80bcacfdffc4825e0d8580e171031c5c2be1989844ade1278.zip"
    },
    "Role": {
     "Fn::GetAtt": [
      "CustomResourceHandlerServiceRole41AEC181",
      "Arn"
     ]
    },
    "Handler": "index.handler",
    "MemorySize": 1024,
    "Runtime": "nodejs16.x",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "Timeout": 900
   },
   "DependsOn": [
    "CustomResourceHandlerServiceRole41AEC181"
   ]
  },
  "betestdevelopvpc774A42AE": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet1Subnet440D9300": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet1RouteTableF4C891D2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet1RouteTableAssociationF04CF793": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1RouteTableF4C891D2"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1Subnet440D9300"
    }
   }
  },
  "betestdevelopvpcpublicsubnetSubnet1DefaultRouteCE57E705": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1RouteTableF4C891D2"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "betestdevelopvpcIGW6FD28469"
    }
   },
   "DependsOn": [
    "betestdevelopvpcVPCGWA25F0328"
   ]
  },
  "betestdevelopvpcpublicsubnetSubnet1EIPC8A1B8EC": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet1NATGateway5915315E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1Subnet440D9300"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "betestdevelopvpcpublicsubnetSubnet1EIPC8A1B8EC",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   },
   "DependsOn": [
    "betestdevelopvpcpublicsubnetSubnet1DefaultRouteCE57E705",
    "betestdevelopvpcpublicsubnetSubnet1RouteTableAssociationF04CF793"
   ]
  },
  "betestdevelopvpcpublicsubnetSubnet2SubnetD65F0BE6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet2"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet2RouteTable91A67E21": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet2"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet2RouteTableAssociationBE7FB985": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet2RouteTable91A67E21"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet2SubnetD65F0BE6"
    }
   }
  },
  "betestdevelopvpcpublicsubnetSubnet2DefaultRoute0DD50D8C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet2RouteTable91A67E21"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "betestdevelopvpcIGW6FD28469"
    }
   },
   "DependsOn": [
    "betestdevelopvpcVPCGWA25F0328"
   ]
  },
  "betestdevelopvpcpublicsubnetSubnet3Subnet2C74A189": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet3"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet3RouteTableD8E26795": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/public-subnetSubnet3"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcpublicsubnetSubnet3RouteTableAssociation8DF6F941": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet3RouteTableD8E26795"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet3Subnet2C74A189"
    }
   }
  },
  "betestdevelopvpcpublicsubnetSubnet3DefaultRouteB7E655E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet3RouteTableD8E26795"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "betestdevelopvpcIGW6FD28469"
    }
   },
   "DependsOn": [
    "betestdevelopvpcVPCGWA25F0328"
   ]
  },
  "betestdevelopvpcprivatesubnetSubnet1SubnetE285E264": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet1RouteTable9BCF50CA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet1"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet1RouteTableAssociation3FE87434": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet1RouteTable9BCF50CA"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet1SubnetE285E264"
    }
   }
  },
  "betestdevelopvpcprivatesubnetSubnet1DefaultRoute28680836": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet1RouteTable9BCF50CA"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1NATGateway5915315E"
    }
   }
  },
  "betestdevelopvpcprivatesubnetSubnet2Subnet69ED12C1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet2"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet2RouteTableEC93F40C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet2"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet2RouteTableAssociation73275593": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet2RouteTableEC93F40C"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet2Subnet69ED12C1"
    }
   }
  },
  "betestdevelopvpcprivatesubnetSubnet2DefaultRoute9EEDA902": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet2RouteTableEC93F40C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1NATGateway5915315E"
    }
   }
  },
  "betestdevelopvpcprivatesubnetSubnet3SubnetD74E6B08": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "AvailabilityZone": "ap-south-1c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet3"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet3RouteTable8EBB17E3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc/private-subnetSubnet3"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcprivatesubnetSubnet3RouteTableAssociationAF47A34A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet3RouteTable8EBB17E3"
    },
    "SubnetId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet3SubnetD74E6B08"
    }
   }
  },
  "betestdevelopvpcprivatesubnetSubnet3DefaultRoute5AEAF780": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "betestdevelopvpcprivatesubnetSubnet3RouteTable8EBB17E3"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "betestdevelopvpcpublicsubnetSubnet1NATGateway5915315E"
    }
   }
  },
  "betestdevelopvpcIGW6FD28469": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "dev-web-app-BetestNodeHapiPg/betest-develop-vpc"
     },
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopvpcVPCGWA25F0328": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    },
    "InternetGatewayId": {
     "Ref": "betestdevelopvpcIGW6FD28469"
    }
   }
  },
  "betestdevelopelbSGCD988F31": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "dev-web-app-BetestNodeHapiPg/betest-develop-elbSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow http traffic",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdevelopecsSGADEF32EE": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "dev-web-app-BetestNodeHapiPg/betest-develop-ecsSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdevelopecsSGfromdevwebappBetestNodeHapiPgbetestdevelopelbSG1548C7BDALLPORTS7B035B51": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Application load balancer",
    "FromPort": 0,
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopelbSGCD988F31",
      "GroupId"
     ]
    },
    "ToPort": 65535
   }
  },
  "betestdevelopecsSGfromdevwebappBetestNodeHapiPgbetestdevelopelbSecurityGroup62C2127890000464B78C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 9000,
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopelbSecurityGroup5CA3C43A",
      "GroupId"
     ]
    },
    "ToPort": 9000
   }
  },
  "betestdevelopecsSGfromdevwebappBetestNodeHapiPgbetestdevelopelbSG1548C7BD900093F0A367": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 9000,
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopelbSGCD988F31",
      "GroupId"
     ]
    },
    "ToPort": 9000
   }
  },
  "betestdevelopdatabasesecuritygroup3D3C62FB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "dev-web-app-BetestNodeHapiPg/betest-develop-database-security-group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdevelopdatabasesecuritygroupfromdevwebappBetestNodeHapiPgbetestdevelopecsSGF9231E8254325AB0AC5E": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Permit the database to accept requests from the fargate service",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopdatabasesecuritygroup3D3C62FB",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "ToPort": 5432
   }
  },
  "betestdevelopdatabasecredentialssecret426B8CBE": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": "Database credentials for betest-develop",
    "GenerateSecretString": {
     "ExcludeCharacters": "\"@/\\ '",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"username\"}"
    },
    "Name": "betest-develop-database-credentials",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "betestdevelopdatabasecredentialssecretAttachmentEEB91C32": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "betestdevelopdatabasecredentialssecret426B8CBE"
    },
    "TargetId": {
     "Ref": "betestdevelopdatabaseinstance31B61AE6"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "betestdevelopdatabaseinstanceSubnetGroup18BADAC4": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for betest-develop-database-instance database",
    "SubnetIds": [
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet1SubnetE285E264"
     },
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet2Subnet69ED12C1"
     },
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet3SubnetD74E6B08"
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopdatabaseinstance31B61AE6": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "10",
    "BackupRetentionPeriod": 1,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "betest_database",
    "DBSubnetGroupName": {
     "Ref": "betestdevelopdatabaseinstanceSubnetGroup18BADAC4"
    },
    "Engine": "postgres",
    "EngineVersion": "14.2",
    "MasterUsername": "username",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "betestdevelopdatabasecredentialssecret426B8CBE"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MaxAllocatedStorage": 30,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "betestdevelopdatabasesecuritygroup3D3C62FB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "betestdevelopredissubnetgroup": {
   "Type": "AWS::ElastiCache::SubnetGroup",
   "Properties": {
    "Description": "Subnet group for the redis cluster",
    "SubnetIds": [
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet1SubnetE285E264"
     },
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet2Subnet69ED12C1"
     },
     {
      "Ref": "betestdevelopvpcprivatesubnetSubnet3SubnetD74E6B08"
     }
    ],
    "CacheSubnetGroupName": "betest-develop-redis-subnet-group",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopredissecuritygroupD9B5D276": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for the redis cluster",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdevelopredissecuritygroupfromdevwebappBetestNodeHapiPgbetestdevelopecsSGF9231E826379A6D83809": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Permit the redis cluster to accept requests from the fargate service",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopredissecuritygroupD9B5D276",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "ToPort": 6379
   }
  },
  "betestdeveloprediscache": {
   "Type": "AWS::ElastiCache::CacheCluster",
   "Properties": {
    "CacheNodeType": "cache.t3.micro",
    "Engine": "redis",
    "NumCacheNodes": 1,
    "CacheSubnetGroupName": {
     "Ref": "betestdevelopredissubnetgroup"
    },
    "ClusterName": "betest-develop-redis-cluster",
    "EngineVersion": "6.2",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "betestdevelopredissecuritygroupD9B5D276",
       "GroupId"
      ]
     }
    ]
   },
   "DependsOn": [
    "betestdevelopredissubnetgroup"
   ]
  },
  "betestdevelopcluster621B062A": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "betest-develop-cluster",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdevelopelbA65A6772": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Name": "betest-develop-alb",
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "betestdevelopelbSecurityGroup5CA3C43A",
       "GroupId"
      ]
     },
     {
      "Fn::GetAtt": [
       "betestdevelopelbSGCD988F31",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "betestdevelopvpcpublicsubnetSubnet1Subnet440D9300"
     },
     {
      "Ref": "betestdevelopvpcpublicsubnetSubnet2SubnetD65F0BE6"
     },
     {
      "Ref": "betestdevelopvpcpublicsubnetSubnet3Subnet2C74A189"
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "betestdevelopvpcpublicsubnetSubnet1DefaultRouteCE57E705",
    "betestdevelopvpcpublicsubnetSubnet1RouteTableAssociationF04CF793",
    "betestdevelopvpcpublicsubnetSubnet2DefaultRoute0DD50D8C",
    "betestdevelopvpcpublicsubnetSubnet2RouteTableAssociationBE7FB985",
    "betestdevelopvpcpublicsubnetSubnet3DefaultRouteB7E655E5",
    "betestdevelopvpcpublicsubnetSubnet3RouteTableAssociation8DF6F941"
   ]
  },
  "betestdevelopelbSecurityGroup5CA3C43A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB devwebappBetestNodeHapiPgbetestdevelopelb33CB8662",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdevelopelbSecurityGrouptodevwebappBetestNodeHapiPgbetestdevelopecsSGF9231E829000D91C629E": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "betestdevelopelbSecurityGroup5CA3C43A",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "betestdevelopecsSGADEF32EE",
      "GroupId"
     ]
    },
    "FromPort": 9000,
    "ToPort": 9000
   }
  },
  "betestdevelopelbListenerE9ECE42A": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "betestdeveloptargetF0525762"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "betestdevelopelbA65A6772"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "betestdeveloptargetF0525762": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/",
    "HealthCheckProtocol": "HTTP",
    "Port": 80,
    "Protocol": "HTTP",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "betestdevelopvpc774A42AE"
    }
   }
  },
  "betestdeveloptaskrole34A10671": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "Role that the api task definitions use to run the api code",
    "RoleName": "betest-develop-task-role",
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdeveloptask1CE8CB09": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BUILD_NAME",
        "Value": "develop"
       },
       {
        "Name": "ENVIRONMENT_NAME",
        "Value": "development"
       },
       {
        "Name": "DB_URI",
        "Value": {
         "Fn::Join": [
          "",
          [
           "postgres://{{resolve:secretsmanager:",
           {
            "Ref": "betestdevelopdatabasecredentialssecret426B8CBE"
           },
           ":SecretString:username::}}:{{resolve:secretsmanager:",
           {
            "Ref": "betestdevelopdatabasecredentialssecret426B8CBE"
           },
           ":SecretString:password::}}@",
           {
            "Fn::GetAtt": [
             "betestdevelopdatabaseinstance31B61AE6",
             "Endpoint.Address"
            ]
           },
           "/betest_database"
          ]
         ]
        }
       },
       {
        "Name": "POSTGRES_HOST",
        "Value": {
         "Fn::GetAtt": [
          "betestdevelopdatabaseinstance31B61AE6",
          "Endpoint.Address"
         ]
        }
       },
       {
        "Name": "REDIS_HOST",
        "Value": {
         "Fn::GetAtt": [
          "betestdeveloprediscache",
          "RedisEndpoint.Address"
         ]
        }
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "511522223657.dkr.ecr.ap-south-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-511522223657-ap-south-1:9a9f0346fbfd0fabbedb9ee50ca3c911878a880c340a5b285237456a3b63ee78"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "betestdeveloptaskbetestdevelopcontainerLogGroupED56E044"
        },
        "awslogs-stream-prefix": "betest-develop-log-group",
        "awslogs-region": "ap-south-1"
       }
      },
      "Memory": 512,
      "Name": "betest-develop-container",
      "PortMappings": [
       {
        "ContainerPort": 9000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "betestdeveloptaskExecutionRole5C5A33DD",
      "Arn"
     ]
    },
    "Family": "betest-develop-task",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "betestdeveloptaskrole34A10671",
      "Arn"
     ]
    }
   }
  },
  "betestdeveloptaskbetestdevelopcontainerLogGroupED56E044": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain"
  },
  "betestdeveloptaskExecutionRole5C5A33DD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ]
   }
  },
  "betestdeveloptaskExecutionRoleDefaultPolicyCA75CF44": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:ap-south-1:511522223657:repository/cdk-hnb659fds-container-assets-511522223657-ap-south-1"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "betestdeveloptaskbetestdevelopcontainerLogGroupED56E044",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "betestdeveloptaskExecutionRoleDefaultPolicyCA75CF44",
    "Roles": [
     {
      "Ref": "betestdeveloptaskExecutionRole5C5A33DD"
     }
    ]
   }
  },
  "betestdevelopserviceServiceDA6BCBBD": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "betestdevelopcluster621B062A"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "betest-develop-container",
      "ContainerPort": 9000,
      "TargetGroupArn": {
       "Ref": "betestdeveloptargetF0525762"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "betestdevelopecsSGADEF32EE",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "betestdevelopvpcpublicsubnetSubnet1Subnet440D9300"
       },
       {
        "Ref": "betestdevelopvpcpublicsubnetSubnet2SubnetD65F0BE6"
       },
       {
        "Ref": "betestdevelopvpcpublicsubnetSubnet3Subnet2C74A189"
       }
      ]
     }
    },
    "Tags": [
     {
      "Key": "sst:app",
      "Value": "web-app"
     },
     {
      "Key": "sst:stage",
      "Value": "dev"
     }
    ],
    "TaskDefinition": {
     "Ref": "betestdeveloptask1CE8CB09"
    }
   },
   "DependsOn": [
    "betestdevelopelbListenerE9ECE42A"
   ]
  }
 },
 "Outputs": {
  "databasehost": {
   "Value": {
    "Fn::GetAtt": [
     "betestdevelopdatabaseinstance31B61AE6",
     "Endpoint.Address"
    ]
   },
   "Export": {
    "Name": "database-host"
   }
  },
  "databasename": {
   "Value": "betest_database",
   "Export": {
    "Name": "database-name"
   }
  },
  "redishost": {
   "Value": {
    "Fn::GetAtt": [
     "betestdeveloprediscache",
     "RedisEndpoint.Address"
    ]
   },
   "Export": {
    "Name": "redis-host"
   }
  },
  "loadbalancerdns": {
   "Value": {
    "Fn::GetAtt": [
     "betestdevelopelbA65A6772",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "load-balancer-dns"
   }
  },
  "awsregion": {
   "Value": "ap-south-1",
   "Export": {
    "Name": "aws-region"
   }
  },
  "elasticcontainerregistryrepo": {
   "Value": "cdk-hnb659fds-container-assets-511522223657-ap-south-1",
   "Export": {
    "Name": "elastic-container-registry-repo"
   }
  },
  "image": {
   "Value": {
    "Fn::Sub": "511522223657.dkr.ecr.ap-south-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-511522223657-ap-south-1:9a9f0346fbfd0fabbedb9ee50ca3c911878a880c340a5b285237456a3b63ee78"
   },
   "Export": {
    "Name": "image"
   }
  },
  "taskdefinitionarn": {
   "Value": {
    "Ref": "betestdeveloptask1CE8CB09"
   },
   "Export": {
    "Name": "task-definition"
   }
  },
  "taskrole": {
   "Value": {
    "Fn::GetAtt": [
     "betestdeveloptaskrole34A10671",
     "Arn"
    ]
   },
   "Export": {
    "Name": "task-role"
   }
  },
  "executionrole": {
   "Value": {
    "Fn::GetAtt": [
     "betestdeveloptaskExecutionRole5C5A33DD",
     "Arn"
    ]
   },
   "Export": {
    "Name": "execution-role"
   }
  },
  "family": {
   "Value": "betest-develop-task",
   "Export": {
    "Name": "family"
   }
  },
  "containername": {
   "Value": "betest-develop-container",
   "Export": {
    "Name": "container-name"
   }
  },
  "containerport": {
   "Value": "9000",
   "Export": {
    "Name": "container-port"
   }
  },
  "logdriver": {
   "Value": "awslogs",
   "Export": {
    "Name": "log-driver"
   }
  },
  "logdriveroptions": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "{\"awslogs-group\":\"",
      {
       "Ref": "betestdeveloptaskbetestdevelopcontainerLogGroupED56E044"
      },
      "\",\"awslogs-stream-prefix\":\"betest-develop-log-group\",\"awslogs-region\":\"ap-south-1\"}"
     ]
    ]
   },
   "Export": {
    "Name": "log-driver-options"
   }
  },
  "SSTMetadata": {
   "Value": "{\"app\":\"web-app\",\"stage\":\"dev\",\"version\":\"2.7.2\",\"metadata\":[]}"
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
